@@ -1,3 +1,15 @@
+2016-11-06  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/anytime.cpp (sformats[]): Remove one redundant entry present
+	twice, move one entry to related entries
+	(convertToTime): Another special case treatment for hhmmss
+
+	* tests/allFormats.R: Align with current formats
+
+2016-11-5   Bob Jansen <bobjansen@gmail.com>
+
+	* src/anytime.cpp (sformats[]): Add one 'no-separator' format
+
 2016-11-05  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/anytime.cpp (sformats[]): Add fractional seconds to four more
